<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:title="@string/show_photos"
        android:key="show"/>
    <ListPreference
        android:defaultValue="3"
        android:entries="@array/delete_cache_time"
        android:entryValues="@array/delete_cache_time_values"
        android:key="delete"
        android:title="@string/delete_cache"
        />
    <SwitchPreference
        android:defaultValue="false"
        android:key="notification_sounds"
        android:title="@string/notification_sounds"/>
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="notification"
        android:dependency="notification_sounds"
        android:title="@string/notification_list"
        android:ringtoneType="notification"/>

</PreferenceScreen>