<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".aboutme.About"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:showIn="@layout/about_me">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="36dp"
            android:textColor="@android:color/primary_text_light"
            android:textStyle="bold"
            android:singleLine="true"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="start"
            android:text="@string/about_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="vertical">
            <TextView
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:singleLine="true"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/question_one"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/answer_one"/>

            <TextView
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:singleLine="true"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/question_two"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/answer_two"/>
            <TextView
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:singleLine="true"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/question_three"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/answer_three"/>
            <TextView
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:singleLine="true"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/question_four"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/answer_four"/>
            <TextView
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:singleLine="true"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/question_five"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/answer_five"/>
            <TextView
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:singleLine="true"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/question_six"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/answer_six"/>
            <TextView
                android:paddingTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:singleLine="true"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/question_seven"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="12sp"
                android:paddingBottom="180dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:text="@string/answer_seven"/>
        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>