<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingTop="?attr/actionBarSize"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/movie_detail_fragment_home"
                      android:layout_width="match_parent"
                      android:background="@drawable/ic_fragment_layout_color"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <!-- <VideoView
                 android:id="@+id/videoview"
                 android:layout_width="fill_parent"
                 android:layout_height="176dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:visibility="visible"
                 android:background="@android:color/transparent"/>

             <Button
                 android:id="@+id/play_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_marginTop="78dp"
                 android:text="@string/play"
                 android:textSize="14sp"
                 android:textColor="@color/textColor"
                 style="?android:attr/borderlessButtonStyle"/>
 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="107dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_insert_photo_white_24"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/movie_detail_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:singleLine="true"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"/>

                    <TextView
                        android:id="@+id/movie_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:hint="@string/hint_country"
                        android:singleLine="true"
                        android:textColorHint="@color/textColor"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        />
                    <TextView
                        android:id="@+id/movie_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:singleLine="true"
                        android:hint="语        言    无"
                        android:textColorHint="@color/textColor"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"/>
                    <TextView
                        android:id="@+id/movie_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:singleLine="true"
                        android:textColorHint="@color/textColor"
                        android:hint="@string/hint_date"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"/>
                    <TextView
                        android:id="@+id/movie_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:hint="@string/hint_time"
                        android:textColorHint="@color/textColor"
                        android:singleLine="true"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"/>

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id">
                </com.google.android.gms.ads.AdView>
                <TextView
                    android:id="@+id/set_movie_detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_detail"
                    android:textColorHint="@color/textColor"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:textColor="@color/textColor"/>
                <TextView
                    android:id="@+id/text_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_senglue"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    android:layout_marginTop="0dp"
                    android:paddingLeft="8dp"
                    android:textStyle="bold"
                    android:layout_gravity="left"/>
                <!--<Button
                    android:id="@+id/text_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_senglue"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_gravity="right"/>-->
               <!-- <ImageView
                    android:id="@+id/movie_shortcut"
                    android:layout_marginTop="16dp"
                    android:layout_width="fill_parent"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_height="wrap_content"
                    />-->
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <Button
                    android:id="@+id/movie_download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>